--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -65,45 +65,45 @@ jobs:
           move ${{ env.ORT_PACKAGE_NAME }}/build/native/include ort/
           move ${{ env.ORT_PACKAGE_NAME }}/runtimes/win-arm64/native/* ort/lib/
 
-      - name: Install Rust Toolchain
-        run: |
-          $exePath = "$env:TEMP\rustup-init.exe"
-          (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/aarch64-pc-windows-msvc/rustup-init.exe', $exePath)
-          & $exePath -y --default-toolchain=1.86.0
-          Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
+      # - name: Install Rust Toolchain
+      #   run: |
+      #     $exePath = "$env:TEMP\rustup-init.exe"
+      #     (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/aarch64-pc-windows-msvc/rustup-init.exe', $exePath)
+      #     & $exePath -y --default-toolchain=1.86.0
+      #     Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
 
-      - name: Install LLVM
-        run: |
-          choco install llvm --yes
-          Add-Content $env:GITHUB_PATH "C:\Program Files\LLVM\bin"
+      # - name: Install LLVM
+      #   run: |
+      #     choco install llvm --yes
+      #     Add-Content $env:GITHUB_PATH "C:\Program Files\LLVM\bin"
 
-      - name: Configure CMake
-        run: |
-          python -m pip install wheel requests
+      # - name: Configure CMake
+      #   run: |
+      #     python -m pip install wheel requests
 
-          cmake --preset windows_arm64_cpu_release
+      #     cmake --preset windows_arm64_cpu_release
 
-      - name: Build with CMake
-        run: |
-          cmake --build --preset windows_arm64_cpu_release --parallel
-          cmake --build --preset windows_arm64_cpu_release --target PyPackageBuild
+      # - name: Build with CMake
+      #   run: |
+      #     cmake --build --preset windows_arm64_cpu_release --parallel
+      #     cmake --build --preset windows_arm64_cpu_release --target PyPackageBuild
 
-      - name: Install the Python Wheel and Test Dependencies
-        run: |
-          # Uninstalling LLVM/Clang as it is no longer required and causes issues with numpy installation
-          choco uninstall llvm --yes
-          python -m pip install "numpy<2" coloredlogs flatbuffers packaging protobuf sympy pytest
-          python -m pip install onnxruntime-qnn
-          python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
+      # - name: Install the Python Wheel and Test Dependencies
+      #   run: |
+      #     # Uninstalling LLVM/Clang as it is no longer required and causes issues with numpy installation
+      #     choco uninstall llvm --yes
+      #     python -m pip install "numpy<2" coloredlogs flatbuffers packaging protobuf sympy pytest
+      #     python -m pip install onnxruntime-qnn
+      #     python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
-      - name: Run the Python Tests
-        run: |
-          python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models"
+      # - name: Run the Python Tests
+      #   run: |
+      #     python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models"
 
-      - name: Build the C# API and Run the C# Tests
-        run: |
-          cd test\csharp
-          dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
+      # - name: Build the C# API and Run the C# Tests
+      #   run: |
+      #     cd test\csharp
+      #     dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
       - name: Build the Java API and Run the Java Tests
         run: |
