--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -105,6 +105,10 @@ jobs:
       #     cd test\csharp
       #     dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
+      - name: Install python packages
+        run: |
+          python -m pip install wheel requests
+
       - name: Build the Java API and Run the Java Tests
         run: |
           python build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
