--- a/cmake/presets/CMakeWinConfigPresets.json
+++ b/cmake/presets/CMakeWinConfigPresets.json
@@ -11,7 +11,9 @@
         "CMAKE_SHARED_LINKER_FLAGS_INIT": "/profile /DYNAMICBASE",
         "USE_CUDA": "OFF",
         "USE_ROCM": "OFF",
-        "USE_GUIDANCE": "ON"
+        "USE_GUIDANCE": "ON",
+        "USE_WINML": "ON",
+        "USE_DML": "ON"
       },
       "condition": {
         "type": "equals",
