--- a/.pipelines/stages/py-validation-stage.yml
+++ b/.pipelines/stages/py-validation-stage.yml
@@ -15,6 +15,8 @@ parameters:
   type: boolean
 - name: enable_win_arm64_cpu
   type: boolean
+- name: enable_win_arm64_dml
+  type: boolean
 - name: enable_linux_cpu
   type: boolean
 - name: enable_linux_cuda
@@ -43,6 +45,15 @@ stages:
       parameters:
         arch: 'arm64'
         ep: 'cpu'
+        os: 'win'
+        SpecificArtifact: ${{ parameters.SpecificArtifact }}
+        BuildId: ${{ parameters.BuildId }}
+
+  - ${{ if eq(parameters.enable_win_arm64_dml, true) }}:
+    - template: jobs/py-validation-job.yml
+      parameters:
+        arch: 'arm64'
+        ep: 'directml'
         os: 'win'
         SpecificArtifact: ${{ parameters.SpecificArtifact }}
         BuildId: ${{ parameters.BuildId }}
