--- a/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
@@ -120,12 +120,12 @@ jobs:
           addToPath: true
 
       - powershell: |
+          # Package dependencie
           $ort_nuget_package_name = "Microsoft.WindowsAppSDK.ML"
-
           # 1.8.1001 to 1.8.2000 will NOT include breaking ORT changes.
           $ort_package_version = "[1.8.1001,1.8.2000]"
 
-          $genai_nuget_package_name = "Microsoft.ML.OnnxRuntimeGenAI.WindowsAppSDK"
+          $genai_nuget_package_name = "Microsoft.ML.OnnxRuntimeGenAI.WinML"
           Write-Host "##vso[task.setvariable variable=genai_nuget_package_name;]$genai_nuget_package_name"
 
           $win_x64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/win-x64/')[0].FullName
