displayName: Whether Windows DirectML package is built.

--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -54,7 +54,7 @@ parameters:
     default: true
 
   - name: enable_winml
-    displayName: "TODO - Build WinML stuff..."
+    displayName: "Whether Windows WinML package is built."
     type: boolean
     default: false
 
