--- a/.pipelines/stages/capi-packaging-stage.yml
+++ b/.pipelines/stages/capi-packaging-stage.yml
@@ -31,6 +31,8 @@ parameters:
 - name: build_config
   type: string
   default: 'release'
+- name: ort_winml_version
+  type: string
 
 stages:
 - stage: capi_packaging
@@ -42,10 +44,10 @@ stages:
         os: 'win'
         arch: 'x64'
         ep: 'winml'
-        cuda_version: ${{ parameters.cuda_version }}
-        ort_version: ${{ parameters.ort_cuda_version }}
-        build_config: ${{ parameters.build_config }}
         enable_winml: ${{ parameters.enable_winml }}
+        ort_version: ${{ parameters.ort_winml_version }}
+        build_config: ${{ parameters.build_config }}
+        cuda_version: ${{ parameters.cuda_version }}
 
   - ${{ if eq(parameters.enable_winml, true) }}:
     - template: jobs/capi-packaging-job.yml
@@ -53,9 +55,9 @@ stages:
         os: 'win'
         arch: 'arm64'
         ep: 'winml'
-        ort_version: ${{ parameters.ort_dml_version }}
-        build_config: ${{ parameters.build_config }}
         enable_winml: ${{ parameters.enable_winml }}
+        ort_version: ${{ parameters.ort_winml_version }}
+        build_config: ${{ parameters.build_config }}
 
   - ${{ if eq(parameters.enable_win_cpu, true) }}:
     - template: jobs/capi-packaging-job.yml
